# tdx-quant

./: .gitignore  Makefile  README.md  deploy.sh  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  nginx.conf  service.sh
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 99150d1306d6_add_backtest_tables.py  a3b2c1d4e5f6_add_sector_tables.py  ccc148a75104_add_stock_data_task_screening_strategy_.py  ddb347795100_add_duration_seconds_to_backtest.py
backend/app/: main.py
backend/app/api/: backtest.py  dashboard.py  data_mgmt.py  health.py  router.py  screening.py  sectors.py  stocks.py  strategies.py  ws.py
backend/app/core/: config.py  database.py  logging.py  redis.py
backend/app/indicators/: mytt_fork.py
backend/app/models/: __init__.py  backtest.py  data_task.py  screening.py  sector.py  stock.py  strategy.py
backend/app/schemas/: backtest.py  dashboard.py  data_mgmt.py  screening.py  sector.py  stock.py  strategy.py
backend/app/services/: backtester.py  data_fetcher.py  indicator.py  screener.py  sector_sync.py  task_manager.py
backend/app/utils/: calendar.py  parquet.py
docs/: PRD.md  option-seller-prompt.md  req.md  us-stock-strategies.md
frontend/: Dockerfile  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/hooks/: useBacktest.ts  useDashboard.ts  useDataMgmt.ts  useSectors.ts  useStrategies.ts  useWebSocket.ts
frontend/src/pages/: Backtest.tsx  Dashboard.tsx  Guide.tsx  (+4 more)
(+4 files in other folders)
