[project]
name = "tdx-quant"
version = "0.1.0"
description = "通达信量化选股系统"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.18.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.8.0",
    "polars>=1.40.0",
    "apscheduler>=3.11.0",
    "redis[hiredis]>=5.0.0",
    "loguru>=0.7.0",
    "httpx>=0.28.0",
    "eltdx>=0.3.0",
    "exchange-calendars>=4.5.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
